# Songs/api/swagger.json
@@ -1,14 +1,20 @@
 {
+    "consumes": [
+        "application/json"
+    ],
+    "produces": [
+        "application/json"
+    ],
     "schemes": [
         "http"
     ],
     "swagger": "2.0",
     "info": {
         "description": "API to manage songs.",
-        "title": "middleware/example",
+        "title": "Songs API",
         "contact": {
-            "name": "Justine Bachelard.",
-            "email": "justine.bachelard@ext.uca.fr"
+            "name": "Mark Ballereau.",
+            "email": "mark.ballereau@etu.uca.fr"
         },
         "version": "1.0.0"
     },
@@ -30,6 +36,50 @@
                                 "$ref": "#/definitions/models.Song"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Something went wrong"
+                    }
+                }
+            },
+            "post": {
+                "description": "Post a song.",
+                "tags": [
+                    "songs"
+                ],
+                "summary": "Post a song.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Artist of the song",
+                        "name": "artist",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Song file name",
+                        "name": "file_name",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Title of the song",
+                        "name": "title",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Song"
+                        }
+                    },
+                    "422": {
+                        "description": "missing fields"
                     },
                     "500": {
                         "description": "Something went wrong"
@@ -67,6 +117,84 @@
                         "description": "Something went wrong"
                     }
                 }
+            },
+            "put": {
+                "description": "Modify a song.",
+                "tags": [
+                    "songs"
+                ],
+                "summary": "Modify a song.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Song UUID formatted ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Artist of the song",
+                        "name": "artist",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Song file name",
+                        "name": "file_name",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Title of the song",
+                        "name": "title",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Song"
+                        }
+                    },
+                    "422": {
+                        "description": "Cannot parse id"
+                    },
+                    "500": {
+                        "description": "Something went wrong"
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a song.",
+                "tags": [
+                    "songs"
+                ],
+                "summary": "Delete a song.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Song UUID formatted ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "404": {
+                        "description": "Song not found"
+                    },
+                    "422": {
+                        "description": "Cannot parse id"
+                    },
+                    "500": {
+                        "description": "Something went wrong"
+                    }
+                }
             }
         }
     },
@@ -74,10 +202,19 @@
         "models.Song": {
             "type": "object",
             "properties": {
-                "content": {
+                "artist": {
+                    "type": "string"
+                },
+                "file_name": {
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "published_date": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
